tests/machine/x/c/append_builtin.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/append_builtin.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/append_builtin.c:19:18: warning: implicit declaration of function ‘append’ [-Wimplicit-function-declaration]
   19 |   printf("%d\n", append(a, 3));
      |                  ^~~~~~
/usr/bin/ld: /tmp/cc6cob6J.o: in function `main':
append_builtin.c:(.text+0xab): undefined reference to `append'
collect2: error: ld returned 1 exit status

   1: #include <stdio.h>
