tests/machine/x/c/append_builtin.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>

int main() {
    int a[] = {1, 2};
    printf("%d\n", append(a, 3));
    return 0;
}
